--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "pg": "^8.11.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.31.1",
+    "sequelize-cli": "^6.6.0"
+  },
   "devDependencies": {
     "body-parser": "^1.20.2",
+    "dotenv-load": "^2.0.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "nodemon": "^2.0.22"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "start-local":"dotenv-load nodemon index.js"
   },
   "repository": {
     "type": "git",
