--- a/package.json
+++ b/package.json
@@ -4,10 +4,20 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "~1.4.4",
+    "crypto-js": "^4.1.1",
+    "debug": "~2.6.9",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.3",
+    "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "~1.9.1",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.31.1",
-    "sequelize-cli": "^6.6.0"
+    "sequelize": "^6.32.0",
+    "sequelize-cli": "^6.6.0",
+    "socket.io": "^4.6.2"
   },
   "devDependencies": {
     "body-parser": "^1.20.2",
@@ -17,8 +27,8 @@
     "nodemon": "^2.0.22"
   },
   "scripts": {
-    "start": "nodemon index.js",
-    "start-local":"dotenv-load nodemon index.js"
+    "start": "dotenv-load nodemon ./bin/www",
+    "start-local": "dotenv-load nodemon server.js"
   },
   "repository": {
     "type": "git",
